Transform für IE9
git-svn-id: https://plugins.svn.wordpress.org/optimus/trunk@613530 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@
 	
 	transform: rotate(-45deg);
 	-o-transform: rotate(-45deg);
+	-ms-transform: rotate(-45deg);
 	-moz-transform: rotate(-45deg);
 	-webkit-transform: rotate(-45deg);
 }
