--- a/css/styles.css
+++ b/css/styles.css
@@ -1,76 +1,3 @@
-/* @group Plugin Icon */
-
-#icon-optimus {
-	width: 32px;
-	height: 32px;
-	background: url('../img/icon@2x.png');
-	background-size: 100%;
-}
-
-/* @end group */
-
-
-/* @group GUI */
-
-#optimus_main .table {
-	width: 460px;
-	height: 1%;
-	margin: 20px 0 0;
-	padding: 0 0 5px 5px;
-	overflow: hidden;
-	border: 1px solid #DFDFDF;
-
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-}
-#optimus_main .form-table {
-	margin: 6px 0 0;
-}
-#optimus_main .form-table th {
-	width: 320px;
-}
-#optimus_main .form-table th span {
-	color: #FFF;
-	margin: 0 5px;
-	padding: 0 5px;
-	display: inline-block;
-	background: #DFDFDF;
-	text-shadow: none;
-
-	border-radius: 3px;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-}
-#optimus_main .form-table th small {
-	color: #6F6F6F;
-	margin: 5px 0 0;
-	display: block;
-	text-shadow: none;
-}
-#optimus_main .form-table th small a {
-	color: inherit;
-}
-#optimus_main .rounded {
-	border-radius: 3px;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-}
-
-#optimus_main .submit {
-	width: 460px;
-	height: 1%;
-	overflow: hidden;
-}
-#optimus_main .submit > a {
-	float: right;
-	margin: 0;
-	line-height: 24px;
-}
-
-/* @end group */
-
-
 /* @group Media */
 
 .manage-column.column-optimus {
@@ -84,20 +11,11 @@
 	background: #bbb;
 	margin-left: 11px;
 	border-radius: 16px;
-
-	-webkit-mask-image: -webkit-gradient(
-		linear,
-		0% 0%,
-		0% 100%,
-		from( rgba(0, 0, 0, .6) ),
-		to( rgba(0, 0, 0, 1) )
-	);
 }
 
 .optimus.column-optimus p {
 	top: 0;
 	left: 0;
-	font: normal 10px/33px Arial;
 	color: #fff;
 	width: 32px;
 	height: 32px;
@@ -105,6 +23,8 @@
 	z-index: 99;
 	position: absolute;
 	text-align: center;
+	font-size: 10px;
+	line-height: 32px;
 }
 .optimus.column-optimus p:before {
 	top: 0;
@@ -123,19 +43,19 @@
 }
 
 .optimus.column-optimus .one p:before {
-	border-right-color: #1fb300;
+	border-right-color: #7ad03a;
 }
 .optimus.column-optimus .two p:before {
-	border-right-color: #1fb300;
-	border-bottom-color: #1fb300;
+	border-right-color: #7ad03a;
+	border-bottom-color: #7ad03a;
 }
 .optimus.column-optimus .three p:before {
-	border-left-color: #1fb300;
-	border-right-color: #1fb300;
-	border-bottom-color: #1fb300;
+	border-left-color: #7ad03a;
+	border-right-color: #7ad03a;
+	border-bottom-color: #7ad03a;
 }
 .optimus.column-optimus .four p:before {
-	border-color: #1fb300;
+	border-color: #7ad03a;
 }
 
 .optimus.column-optimus .fail p:before {
