Update the default admin color scheme
git-svn-id: https://plugins.svn.wordpress.org/optimus/trunk@1142919 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 	width: 32px;
 	height: 32px;
 	position: relative;
-	background: #bbb;
+	background: #b4b9be;
 	margin-left: 11px;
 	border-radius: 16px;
 }
